--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "lucide-react": "^0.435.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
