--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
