--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "axios": "^1.8.4",
     "lucide-react": "^0.435.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
